--- a/excercise_2_7/excercise.ipynb
+++ b/excercise_2_7/excercise.ipynb
@@ -211,8 +211,7 @@
     "# For each is in the apply, as it executes the python ternary for each row.\n",
     "births['child_birth'] = births.apply(lambda row: 'at_home' if 'first line child birth, at home' in row['child_birth'] else 'not_at_home', axis=1)\n",
     "births = births.rename(columns={'child_birth':'home'})\n",
-    "births\n",
-    "\n"
+    "births"
    ]
   },
   {
