--- a/excercise_2_7/excercise.ipynb
+++ b/excercise_2_7/excercise.ipynb
@@ -603,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Excercise 2.7.4\n",
+    "# Excercise 2.7.4-6\n",
     "X = births[['pari', 'age_cat', 'etni', 'urban']]\n",
     "y = births['home'] "
    ]
