--- a/excercise_2_7/excercise.ipynb
+++ b/excercise_2_7/excercise.ipynb
@@ -605,7 +605,8 @@
    "source": [
     "# Excercise 2.7.4-6\n",
     "X = births[['pari', 'age_cat', 'etni', 'urban']]\n",
-    "y = births['home'] "
+    "y = births['home'] \n",
+    "X = pd.get_dummies(X, drop_first=True)"
    ]
   },
   {
@@ -646,7 +647,6 @@
     }
    ],
    "source": [
-    "X = pd.get_dummies(X, drop_first=True)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Logistic Regression Model\n",
